<resources>
    <string name="app_name">Tip the Crates</string>
    <string name="how_to_play">how to play</string>
    <string name="scores">scores</string>
    <string name="achievements">achievements</string>
    <string name="continuous">continuous</string>
    <string name="congratulations">Level completed. Congratulations!</string>
    <string name="timed">timed</string>
    <string name="practice">practice</string>
    <string name="score_sample">score: 99999</string>
    <string name="level_sample">level: 99999</string>
    <string name="time_sample" translatable="false">99</string>
    <string name="difficulty_first">beginner</string>
    <string name="difficulty_second">intermediate</string>
    <string name="difficulty_third">advanced</string>
    <string name="difficulty_fourth">expert</string>
    <string name="level">level: %d</string>
    <string name="score">score: %d</string>
    <string name="tip_can">You can tip these crates</string>
    <string name="tip_can_not">But not these crates</string>
    <string name="brown_access">You can access the brown crates but must tip crates to reach the grey or yellow crates</string>
    <string name="win">You win a level when you reach the yellow crate</string>
    <string name="pillars_numbered">The useable pillars of crates are numbered with their height</string>
    <string name="pillars_flick">Flick the pillars of crates to tip them over</string>
    <string name="difficulty_increase">Difficulty increases as the game progresses</string>
    <string name="practice_use">Play the practice game to improve your skills</string>
    <string name="good_luck">Good luck!</string>
    <string name="google_created_not">The GoogleApiClient could not be created at this time</string>
    <string name="google_unavailable">Google Play Services are unavailable</string>
    <string name="google_update">You must update your Google Play Services to use Google Play features of this application</string>
    <string name="google_connect_not">Could not connect to Google Play Services at this time</string>
    <string name="google_connecting">Connecting to Google Play Services</string>
    <string name="google_disconnect_not">Could not disconnect from Google Play Services at this time</string>
    <string name="scored">Game over. You scored %d!</string>
    <string name="pref_audio_title">Audio</string>
    <string name="click_sound">Click sound</string>
    <string name="click_sound_summ">Whether the click is played</string>
    <string name="music">Music</string>
    <string name="music_summ">Whether the music is played</string>
    <string name="game_sounds">Game sounds</string>
    <string name="game_sounds_summ">Whether the game sounds are played</string>
    <string name="on">on</string>
    <string name="off">off</string>
</resources>
