<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutOuter"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/layoutHoriz0"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center_vertical|clip_horizontal"

        android:layout_marginBottom="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="0dp"

        android:layout_weight="2"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingBottom="0dp"

        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:paddingTop="0dp"
        app:layout_constraintBottom_toTopOf="@+id/layoutHoriz1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutHeader">

        <TextView
            android:id="@+id/textView0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/difficulty_increase"
            android:textColor="@color/white"
            android:textSize="@dimen/fontSize" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutHoriz1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="0dp"

        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="0dp"
        android:layout_weight="2"

        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingBottom="0dp"
        android:paddingLeft="16dp"

        android:paddingRight="16dp"
        android:paddingTop="0dp"
        app:layout_constraintBottom_toTopOf="@+id/layoutHoriz2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutHoriz0">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/practice_use"
            android:textColor="@color/white"
            android:textSize="@dimen/fontSize" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutHoriz2"
        android:layout_width="match_parent"
        android:layout_height="0dp"

        android:layout_marginBottom="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="0dp"

        android:layout_weight="2"
        android:gravity="center_vertical"
        android:orientation="horizontal"

        android:paddingBottom="0dp"
        android:paddingLeft="0dp"
        android:paddingRight="0dp"
        android:paddingTop="0dp"
        app:layout_constraintBottom_toTopOf="@+id/layoutHoriz3"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutHoriz1">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/good_luck"
            android:textColor="@color/white"
            android:textSize="@dimen/fontSize" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutHoriz3"
        android:layout_width="match_parent"
        android:layout_height="0dp"

        android:layout_marginBottom="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="0dp"

        android:layout_weight="1"
        android:orientation="horizontal"
        android:paddingBottom="0dp"

        android:paddingLeft="0dp"
        android:paddingRight="0dp"
        android:paddingTop="0dp"
        app:layout_constraintBottom_toTopOf="@+id/layoutFooter"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutHoriz2">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/buttonPrevious"
                android:layout_width="@dimen/otherButtonSize"
                android:layout_height="@dimen/otherButtonSize"
                android:layout_marginBottom="@dimen/otherButtonMargin"
                android:layout_marginLeft="@dimen/otherButtonMargin"
                android:background="@drawable/button_previous"
                android:onClick="getPageTwo"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent" />

        </android.support.constraint.ConstraintLayout>

    </LinearLayout>

</LinearLayout>